tests/NormalTests/paczka1/fuzzy1/47288693.err
Error in line 3: TBAOZFuEuy A189 53,85
Error in line 6: S907 S675 88,7
Error in line 10: gzO4M S675 83,1
Error in line 13: ZY8miuu3nBQ A189 70,9
Error in line 16: gzO4M A189 69,9
Error in line 14: uJn S907 38,0
Error in line 23: gzO4M A189 34,84
Error in line 19: gzO4M S907 95,1
Error in line 29: S907 S907 71,5
Error in line 2: TBAOZFuEuy A189 11,2
